# GitHub-User-Activity

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
src/: api.py  main.py
src/github_user_activity/: api.py  main.py
tests/: api_test.py
